# gvr_bot

gvr_bot_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
gvr_bot_2dnav/launch/: move_base.launch  run_robot_simulation.launch  run_robot_simulation_maze_1.launch
gvr_bot_rplidar_hector_map_generated_launch_2019_5_10t16_55_19/: CMakeLists.txt  package.xml
gvr_bot_rplidar_hector_map_generated_launch_2019_5_10t16_55_19/launch/: load_urdf_onto_ros_param_server.launch  robot.launch  robot_navigation.launch  run_robot_simulation.launch  spawn_urdf_in_gazebo.launch  start_gazebo.launch
gvr_bot_rplidar_hector_map_generated_urdf_2019_5_10t16_55_19/: CMakeLists.txt  package.xml
gvr_bot_rplidar_hector_map_generated_urdf_2019_5_10t16_55_19/meshes/: gvr_bot_flipper_18z_prt.stl  gvr_bot_flipper_23z_prt.stl  gvr_bot_rplidar_hector_map_1_asm.stl  gvr_bot_tread_10z_prt.stl  gvr_bot_tread_5z_prt.stl  rotational_cylinder_11z_prt.stl  rotational_cylinder_12z_prt.stl  rotational_cylinder_13z_prt.stl  rotational_cylinder_15z_prt.stl  rotational_cylinder_16z_prt.stl  rotational_cylinder_17z_prt.stl  rotational_cylinder_19z_prt.stl  rotational_cylinder_1z_prt.stl  rotational_cylinder_20z_prt.stl  rotational_cylinder_21z_prt.stl  rotational_cylinder_22z_prt.stl  rotational_cylinder_24z_prt.stl  rotational_cylinder_2z_prt.stl  rotational_cylinder_3z_prt.stl  rotational_cylinder_4z_prt.stl  rotational_cylinder_6z_prt.stl  rotational_cylinder_7z_prt.stl  rotational_cylinder_8z_prt.stl  rotational_cylinder_9z_prt.stl
gvr_bot_rplidar_hector_map_generated_urdf_2019_5_10t16_55_19/urdf/: gvr_bot_rplidar_hector_map.urdf
gvr_bot_rplidar_navigation_generated_launch_2019_7_25t16_21_28/: CMakeLists.txt  package.xml
gvr_bot_rplidar_navigation_generated_launch_2019_7_25t16_21_28/launch/: load_urdf_onto_ros_param_server.launch  robot.launch  run_robot_simulation.launch  spawn_urdf_in_gazebo.launch
gvr_bot_rplidar_navigation_generated_urdf_2019_7_25t16_21_28/: CMakeLists.txt  package.xml
gvr_bot_rplidar_navigation_generated_urdf_2019_7_25t16_21_28/meshes/: gvr_bot_body_prt.stl  gvr_bot_flipper_4z_prt.stl  gvr_bot_flipper_9z_prt.stl  gvr_bot_rplidar_navigation_1_asm.stl  gvr_bot_tread_13z_prt.stl  gvr_bot_tread_22z_prt.stl  plexiglass_platform_prt.stl  rotational_cylinder_10z_prt.stl  rotational_cylinder_14z_prt.stl  rotational_cylinder_15z_prt.stl  (+15 more)
gvr_bot_simulation/: CMakeLists.txt  package.xml
(+3 files in other folders)
