<?xml version="1.0"?>
<package format="2">
  <name>gvr_bot_2dnav</name>
  <version>0.0.0</version>
  <description>The gvr_bot_2dnav package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jcoombe@metamorphsoftware.com">Joseph Coombe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://www.metamorphsoftware.com/</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="jcoombe@metamorphsoftware.com">Joseph Coombe</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>openmeta_testbench_simulation_executor</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
